--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -10,9 +10,9 @@ django = "^4.2.2"
 gunicorn = "^20.1.0"
 celery = "^5.3.0"
 django-environ = "^0.10.0"
-psycopg2 = "^2.9.6"
 redis = "^4.5.5"
 djangorestframework = "^3.14.0"
+psycopg2-binary = "^2.9.6"
 
 
 [tool.poetry.group.dev.dependencies]
